--- a/news-item.html
+++ b/news-item.html
@@ -107,7 +107,7 @@
             </li>
             <li class="nav__item"><a class="nav__link" href="vps.html">Услуги</a>
             </li>
-            <li class="nav__item"><a class="nav__link" href="news.html">Новости</a>
+            <li class="nav__item"><a class="nav__link nav__link--active">Новости</a>
             </li>
             <li class="nav__item"><a class="nav__link" href="partners.html">Партнерам</a>
             </li>
