--- a/about.html
+++ b/about.html
@@ -29,10 +29,7 @@
           <ul class="nav__list">
             <li class="nav__item"><a class="nav__link nav__link--active">О компании</a>
             </li>
-            <li class="nav__item nav__item--drop"><a class="nav__link nav__link--drop">Услуги
-                <svg>	
-                  <use xlink:href="#down"></use>
-                </svg></a>
+            <li class="nav__item nav__item--drop"><a class="nav__link nav__link--drop">Услуги<span class="drop-arrow"></span></a>
               <ul class="nav__sublist sublist">
                 <li class="sublist__item"><a class="sublist__link" href="haas.html">Аренда оборудования HaaS	</a></li>
                 <li class="sublist__item"><a class="sublist__link" href="dedicated.html">Выделенные  серверы Dedicated	</a></li>
