--- a/haas.html
+++ b/haas.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge;IE=EmulateIE7;IE=EmulateIE8;IE=EmulateIE9;chrome=1">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>HaaS от MerlionCloud — IT-оборудование как услуга | MerlionCloud</title>
     <meta name="description" content="Серверы, СХД, Сетевое оборудование и ПО, в составе комплексных решений или отдельно, без значительных первоначальных инвестиций">
     <meta name="keywords" content="MerlionCloud">
@@ -21,8 +21,8 @@
     <header class="header">
       <div class="container header__container"><a class="header__logo" href="index.html"><img class="logo" src="images/logo.svg" alt="MerlionCloud лого"></a>
         <nav class="nav header__nav">
-          <button class="close-btn">
-            <svg>
+          <button class="close-btn" aria-label="Закрыть меню">
+            <svg aria-hidden="true">
               <use xlink:href="#close"></use>
             </svg>
           </button>
@@ -49,8 +49,8 @@
             </li>
           </ul>
         </nav>
-        <button class="burger" aria-hidden="true">
-          <svg>	
+        <button class="burger" aria-label="Открыть меню">
+          <svg aria-hidden="true">
             <use xlink:href="#burger"></use>
           </svg>
         </button>
@@ -182,7 +182,7 @@
       <section class="consultation-form background-scroll">
         <div class="container">
           <h2 class="consultation-form__title title">Консультация по&nbsp;вашему проекту</h2>
-          <form class="consultation-form__inputs" method="post" action="" enctype="multipart/form-data">
+          <form class="consultation-form__inputs" method="post" enctype="multipart/form-data">
             <fieldset class="consultation-form__group">
               <input class="consultation-form__input" type="text" placeholder=" " id="consultation-form__name" autocomplete="off" required>
               <label class="consultation-form__label" for="consultation-form__name">Имя</label>
@@ -215,7 +215,7 @@
         <div class="popup-form__container">
           <h2 class="popup-form__title title">Получить консультацию</h2>
           <p class="popup-form__text">Спасибо за&nbsp;проявленный интерес к&nbsp;MerlionCloud. Мы свяжемся с&nbsp;вами в&nbsp;течении рабочего дня.</p>
-          <form class="popup-form__inputs" method="post" action="" enctype="multipart/form-data">
+          <form class="popup-form__inputs" method="post" enctype="multipart/form-data">
             <fieldset class="popup-form__group">
               <input class="popup-form__input" type="text" placeholder=" " id="popup-form__name" required>
               <label class="popup-form__label" for="popup-form__name">Имя</label>
@@ -262,7 +262,7 @@
              &copy;&nbsp; <span id="copyright-year"></span>, MerliONCloud Все&nbsp;права&nbsp;защищены</p>
         </div>
       </div>
-      <div class="social"><a><img src="images/whatsapp.svg" alt="whatsapp"></a><a><img src="images/telegram.svg" alt="telegram"></a></div>
+      <div class="social"><a href="#" aria-label="whatsapp"><img src="images/whatsapp.svg" alt="whatsapp"></a><a href="#" aria-label="telegram"><img src="images/telegram.svg" alt="telegram"></a></div>
     </footer><svg display="none">
 	<symbol width="32" height="8" viewBox="0 0 32 8" id="arrow">
 		<path
@@ -291,9 +291,9 @@
 		</path>
 	</symbol>
 </svg>
-    <script type="text/javascript" src="js/jquery-3.5.1.min.js"></script>
-    <script type="text/javascript" src="js/jquery.fancybox.min.js"></script>
-    <script type="text/javascript" src="js/owl.carousel.min.js"></script>
-    <script type="text/javascript" src="js/main.js"></script>
+    <script src="js/jquery-3.5.1.min.js"></script>
+    <script src="js/jquery.fancybox.min.js"></script>
+    <script src="js/owl.carousel.min.js"></script>
+    <script src="js/main.js"></script>
   </body>
 </html>
