--- a/dedicated.html
+++ b/dedicated.html
@@ -11,6 +11,7 @@
     <meta property="og:title" content="Аренда выделенного сервера с предоставлением доступа за 5 минут | MerlionCloud">
     <meta property="og:description" content="Для проектов любой сложности, изолированность от других веб-ресурсов, самостоятельная настройка оборудования, стабильная работа">
     <meta property="og:image" content="images/cover_project.jpg">
+    <meta name="robots" content="noindex, nofollow">
     <link rel="shortcut icon" type="image/png" href="images/favicon.ico">
     <link rel="stylesheet" type="text/css" href="css/owl.carousel.min.css">
     <link rel="stylesheet" type="text/css" href="css/owl.theme.default.min.css">
