--- a/haas.html
+++ b/haas.html
@@ -11,6 +11,7 @@
     <meta property="og:title" content="HaaS от MerlionCloud — IT-оборудование как услуга | MerlionCloud">
     <meta property="og:description" content="Серверы, СХД, Сетевое оборудование и ПО, в составе комплексных решений или отдельно, без значительных первоначальных инвестиций">
     <meta property="og:image" content="images/cover_project.jpg">
+    <meta name="robots" content="noindex, nofollow">
     <link rel="shortcut icon" type="image/png" href="images/favicon.ico">
     <link rel="stylesheet" type="text/css" href="css/owl.carousel.min.css">
     <link rel="stylesheet" type="text/css" href="css/owl.theme.default.min.css">
