--- a/cloud.html
+++ b/cloud.html
@@ -11,6 +11,7 @@
     <meta property="og:title" content="Аренда виртуальной инфраструктуры на OpenStack или VMWare | MerlionCloud">
     <meta property="og:description" content="Облако OpenStack или VMWare дает возможность установки почти всех известных ОС. Не тратьте ресурсы на устаревшие технологии и их поддержание">
     <meta property="og:image" content="images/cover_project.jpg">
+    <meta name="robots" content="noindex, nofollow">
     <link rel="shortcut icon" type="image/png" href="images/favicon.ico">
     <link rel="stylesheet" type="text/css" href="css/owl.carousel.min.css">
     <link rel="stylesheet" type="text/css" href="css/owl.theme.default.min.css">
