--- a/contacts.html
+++ b/contacts.html
@@ -11,6 +11,7 @@
     <meta property="og:title" content="Контакты | MerlionCloud">
     <meta property="og:description" content="Адрес, телефон, электронная почта">
     <meta property="og:image" content="images/cover_project.jpg">
+    <meta name="robots" content="noindex, nofollow">
     <link rel="shortcut icon" type="image/png" href="images/favicon.ico">
     <link rel="stylesheet" type="text/css" href="css/owl.carousel.min.css">
     <link rel="stylesheet" type="text/css" href="css/owl.theme.default.min.css">
@@ -56,7 +57,7 @@
       <section class="contacts">
         <div class="contacts__container container">
           <h1 class="contacts__title h2">Контакты</h1>
-          <div class="contacts__info"><a class="contacts__phone" href="tel:78005115122">8-800-511-51-22</a><a class="contacts__email" href="mailto:cloud@merlion.ru">cloud@merlion.ru</a><span class="contacts__address">«Кубик», блок&nbsp;«Б», бульвар&nbsp;Строителей, д.&nbsp;4, г.&nbsp;Красногорск, 143401, Россия</span></div>
+          <div class="contacts__info"><a class="contacts__phone" href="tel:78005115122">8-800-511-51-22</a><a class="contacts__email" href="mailto:support@merlioncloud.ru">support@merlioncloud.ru</a><span class="contacts__address">«Кубик», блок&nbsp;«Б», бульвар&nbsp;Строителей, д.&nbsp;4, г.&nbsp;Красногорск, 143401, Россия</span></div>
           <div class="contacts__map"><iframe src="https://yandex.ru/map-widget/v1/?um=constructor%3A44bce95e470cca82c9a2d0707bbfafcfd370184d2c3f1483623fb657941a5da4&amp;source=constructor" frameborder="0"></iframe></div>
         </div>
       </section>
