--- a/news-item.html
+++ b/news-item.html
@@ -11,6 +11,7 @@
     <meta property="og:title" content="MerliOnCloud выводит на рынок новую услугу — аренда выделенной инфраструктуры">
     <meta property="og:description" content="Для партнеров MERLION серверное решение Bare Metal предполагает два варианта сотрудничества и полное сопровождение со стороны MerliOnCloud">
     <meta property="og:image" content="images/cover_project.jpg">
+    <meta name="robots" content="noindex, nofollow">
     <link rel="shortcut icon" type="image/png" href="images/favicon.ico">
     <link rel="stylesheet" type="text/css" href="css/owl.carousel.min.css">
     <link rel="stylesheet" type="text/css" href="css/owl.theme.default.min.css">
