--- a/news.html
+++ b/news.html
@@ -11,6 +11,7 @@
     <meta property="og:title" content="Новости | MerlionCloud">
     <meta property="og:description" content="Актуальные новости и пресс-релизы">
     <meta property="og:image" content="images/cover_project.jpg">
+    <meta name="robots" content="noindex, nofollow">
     <link rel="shortcut icon" type="image/png" href="images/favicon.ico">
     <link rel="stylesheet" type="text/css" href="css/owl.carousel.min.css">
     <link rel="stylesheet" type="text/css" href="css/owl.theme.default.min.css">
