--- a/partners.html
+++ b/partners.html
@@ -206,7 +206,7 @@
              &copy;&nbsp; <span id="copyright-year"></span>, MerliONCloud Все&nbsp;права&nbsp;защищены</p>
         </div>
       </div>
-      <div class="social"><a href="#" aria-label="whatsapp"><img src="images/whatsapp.svg" alt="whatsapp"></a><a href="#" aria-label="telegram"><img src="images/telegram.svg" alt="telegram"></a></div>
+      <div class="social"><a aria-label="whatsapp"><img src="images/whatsapp.svg" alt="whatsapp"></a><a aria-label="telegram"><img src="images/telegram.svg" alt="telegram"></a></div>
     </footer><svg display="none">
 	<symbol width="32" height="8" viewBox="0 0 32 8" id="arrow">
 		<path
